--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+*{
+  background-color: pink;
+}
+.calc{
+  width: 320px;
+  margin: 100px auto;
+}
+#answer{
+  background-color: #e2e2e2;
+  padding: 10px;
+  font-size: 35px;
+  width: 295px;
+height: 45px ;
+text-align: right;
+border: 3px solid #333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button{
+  background-color: #333;
+  height: 80px;
+  width: 80px;
+  color: wheat;
+  font-size: 30px;
+  border: 1px solid black;
+  float: left;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button1{
+  width: 160px;
 }
